# supernote-markdown

./: .gitignore  CLAUDE.md  README.md  analyze_collection.py  extract_images.py  extract_titles.py  main.py  merge_note.py  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  split_note.py  sync-notes.sh  sync.sh  view-note-snippet.css
docs/ocr/: readme.md  the_indexer_ocr.txt
src/: server.js
